# hello-wasm

./: Cargo.toml  README.md  index.html  wasm.js
js/: wasm.js
pkg/: hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
styles/: index.css
