[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Stribx"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]